test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/compound_add_two_pointers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[42]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  int
  *
  identifier(elem0)
  =
  identifier(arr)
  ;
  int
  *
  identifier(elem1)
  =
  identifier(arr)
  +
  const int(1)
  ;
  identifier(elem0)
  +=
  identifier(elem1)
  ;
  return
  const int(0)
  ;
  }
